:heavy_plus_sign: Install and configure Webpacker

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <%= javascript_pack_tag 'application' %>
     <title>EventManager</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
